force lower case input count rule utility enforce some form of rule utility

--- a/sequitur.html
+++ b/sequitur.html
@@ -1,3 +1,15 @@
-<div>Please enter a string to compress:</div>
-<input id="input">
-<textarea id="result"></textarea>
+<!doctype html>
+<html>
+	<head>
+		<title>Sequitur</title>
+		<link rel="stylesheet" type="text/css" href="sequitur.css">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src="sequitur.js"></script>
+	</head>
+	<body>
+		<div>Please enter a string to compress:</div>
+		<input id="input">
+		<textarea id="result"></textarea>
+	</body>
+</html>
+
